--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://yyhhk6.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: ""
 github_username:  yyhhk6
-
 lang: zh
 timezone: Asiz/Shanghai
+show_excerpts: yes
 
 # Build settings
 markdown: kramdown
